/*************************************************************************************************
* Licensed to the Apache Software Foundation (ASF) under one
* or more contributor license agreements.  See the NOTICE file
* distributed with this work for additional information
* regarding copyright ownership.  The ASF licenses this file
* to you under the Apache License, Version 2.0 (the
* "License"); you may not use this file except in compliance
* with the License.  You may obtain a copy of the License at
*
*     http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing,
* software distributed under the License is distributed on an
* "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
* KIND, either express or implied.  See the License for the
* specific language governing permissions and limitations
* under the License.
**************************************************************************************************/

syntax = "proto3";

message meas_info
{
  // time since unix epoch (seconds)
  double time_ssue = 1;

  // energy (joules) 
  double energy_j = 2;

  // measurement id
  uint32 id = 3;
  
  // cluster size (number of points that formed this measurement)
  uint32 cluster_size = 4;
  
  // satId and location (ECEF,meters)
  uint32 sat_id = 5;
  double sat_ecef_x_m = 6;
  double sat_ecef_y_m = 7;
  double sat_ecef_z_m = 8;
  
  // position in ECEF (meters)
  double high_ecef_x_m = 9;
  double high_ecef_y_m = 10;
  double high_ecef_z_m = 11;
  double low_ecef_x_m = 12;
  double low_ecef_y_m = 13;
  double low_ecef_z_m = 14;
}

message event_info
{
  // info for each measurement
  repeated meas_info meas = 1;
  
  // event info
  double event_time_ssue = 2;
  double location_ecef_x_m = 3;
  double location_ecef_y_m = 4;
  double location_ecef_z_m = 5;
  double velocity_ecef_x_m = 6;
  double velocity_ecef_y_m = 7;
  double velocity_ecef_z_m = 8;
  double event_energy_j = 9;
}

message event_set
{
  // all the events found
  repeated event_info event = 1;
}
